--- a/Javi.html
+++ b/Javi.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Codigo base</title>
+    <title>JAVIER</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -13,79 +13,66 @@
     <!-- link a el js del reproductor mp3 -->
     <link rel="stylesheet" href="javi/reproductorScript.js">
     <!-- link a el css general de la pagina javi.html -->
-    <link rel="stylesheet" href="javi/CssJaviHtml.css">
+    <link rel="stylesheet" href="css/CssJaviHtml.css">
     <link rel="stylesheet" href="javi/scriptQuSom.js">
 
     <script type="text/javascript">
-      $(document).ready(function(){
-        $(".tercera,.segunda").css("display","none");
-        // $(".tercera").hide();
-        // $(".segunda").hide();
+      $(document).ready(function() {
+        // $(".tercera,.segunda").css("display","none");
+        $(".tercera").hide();
+        $(".segunda").hide();
+        $(".cuarta").hide();
         var contador = 0;
         $(".izquierda").click(function(){
           contador++;
           if (contador==1) {
-            $(".primera").hide();
-            $(".segunda").fadeIn(2000);
-
+            $(".primera").hide("slide");
+            $(".segunda").show("slide");
           }else if (contador==2) {
-            // $(".tercera").css("display","block");
-            // $(".segunda").css("display","none");
+            $(".segunda").hide("slide");
+            $(".tercera").show("slide");
 
-          }else if (contador>2) {
-            // $(".primera").css("display","block");
-            // $(".tercera").css("display","none");
+          }else if (contador==3) {
+            $(".tercera").hide("slide");
+            $(".cuarta").show("slide");
+          }
+          else if (contador>3) {
+            $(".cuarta").hide("slide");
+            $(".primera").show("slide");
             contador=0;
           }
         });
-      });
+        $(".derecha").click(function(){
+          contador++;
+          if (contador==1) {
+            $(".primera").hide();
+            $(".segunda").show("slide");
+          }else if (contador==2) {
+            $(".segunda").hide();
+            $(".tercera").show("slide");
 
+          }else if (contador==3) {
+            $(".tercera").hide();
+            $(".cuarta").show("slide");
+          }
+          else if (contador>3) {
+            $(".cuarta").hide();
+            $(".primera").show("slide");
+            contador=0;
+          }
+        });
+          $('.rotulo img').css("display","none");
+        $('#ejRot').click(function(){
+          $('.rotulo img').css("display","inline-block");
+        });
 
+        $('#QS').click(function(){
+          $(location.assign("QuienesSomos.html"));
+        });
+
+    });
     </script>
-    <style media="screen">
-    .fondo{
-      width: 100%;
-      height: 500px;
-      margin-top: 73px;
-      position: absolute;
-      z-index: -1;
-    }
-.botones{
-      margin-top: 550px;
-      width: 100%;
-    }
-    .derecha{
-      float:center;
-      opacity: 0.2;
-      border: black;
-      background-color: black;
-      color: white;
-      font-size: 1em;
-    }
-.izquierda{
-      float: center;
-      margin-left: 50%;
-      opacity: 0.2;
-      border: black;
-      background-color: black;
-      color: white;
-      font-size: 1em;
 
-    }
-    .izquierda:hover,.derecha:hover{
-      opacity:0.7;
-    }
-.infoProyectos{
-      position:absolute;
-      z-index: 1;
-      color: white;
-      margin-top: 120px;
-      width: 80%;
-    }
-    .infoProyectos h1{
-      margin-bottom: 20px;
-    }
-    </style>
 </head>
 
 <body>
@@ -105,18 +92,18 @@
                     <a class="nav-link" href="inicio.html">Inicio</a>
                   </li>
                   <div class="btn-group">
-                    <button href="#" type="button" class="btn navbar btn-dark">Quienes somos</button>
+                    <button id="QS" href="QuienesSomos.html" type="button" class="btn navbar btn-dark">Quienes somos</button>
                     <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <span class="sr-only"></span>
                     </button>
                     <div class="dropdown-menu">
-                      <a class="dropdown-item" href="#">Javier</a>
-                      <a class="dropdown-item" href="#">Eric</a>
-                      <a class="dropdown-item" href="#">Celia</a>
+                      <a class="dropdown-item" href="Javi.html">Javier</a>
+                      <a class="dropdown-item" href="Eric.html">Eric</a>
+                      <a class="dropdown-item" href="Celia.html">Celia</a>
                     </div>
                   </div>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Servicios</a>
+                    <a class="nav-link" href="Servicios.html">Servicios</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -128,7 +115,7 @@
           </div>
           <div class="usuario">
             <ul>
-              <li><a href="#"><i class="fas fa-user"></i></a></li>
+              <li><a href="registro.html"><i class="fas fa-user"></i></a></li>
             </ul>
           </div>
 
@@ -137,93 +124,84 @@
         </div>
 
         <div id="cont" class="row pt-5">
-        <div class="">
-          <section class="row col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-            <article class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+            <div class="yo col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
               <img src="quienesSomos/javi.jpg" alt="" id="Javi">
               <h2>JAVIER</h2>
               <p>En los proyectos suelo dedicarme a la parte de animaciones, música y video. Utilizo CSS3 , HTML5 y JQUERY. <br> Tengo una actitud reservada. Soy: observador, meticuloso, metódico, paciente y autodidacta. Me gusta la lógica y me considero una persona centrada con toques de "sana locura".</p>
-            </article>
-            <article class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-              <h3 id="proyectos">PROYECTOS REALIZADOS</h3>
-              <div class="primero row col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                  <img src="javi/proy1.png" alt="" class="fondo">
-                  <div class="botones">
-                    <button type="button" name="button" class="izquierda"> <i class="far fa-circle"></i> </button>
-                    <button type="button" name="button" class="derecha"> <i class="far fa-circle"></i> </button>
-                  </div>
+            </div>
+            <h2></h2>
+            <div class="primero row col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <img src="javi/fondo.png" alt="" class="fondo">
+                <div class="botones">
+                  <button type="button" name="button" class="izquierda"> <i class="far fa-circle"></i></button>
+                  <button type="button" name="button" class="derecha"> <i class="far fa-circle"></i></button>
                 </div>
-                <div class="infoProyectos row col-xl-5 offset-xl-5">
-                  <div class="primera">
+              </div>
 
-                  </div>
-                  <div class="segunda">
 
-                  </div>
-                  <div class="tercera">
 
-                  </div>
+
+              <div class="contacto row col-xl-5 offset-xl-5 col-lg-5 offset-lg-5 col-md-5 offset-md-5">
+                <div class="primera">
+                  <h1>Estos son los proyectos que he realizado, para más información comunicate conmigo. Sera un placer atenderte.</h1>
                 </div>
-            </article>
+                <div class="segunda">
+                  <img src="javi/fondo1.png" alt="">
 
-            <article class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-              <div class="comentario">
-                <p>"Some people want something to happen, others dream of it happening , others make it happen" <strong>Michael Jordan</strong></p>
-              </div>
-            </article>
-            <div class="social">
-                <ul>
-                     <li><a href="https://www.facebook.com/javier.elnuevo.9" target="_blank" class="icon-facebook"><i class="fab fa-facebook-f"></i></a></li>
-                     <li><a href="https://twitter.com/MrSubconsciente" target="_blank" class="icon-twitter"><i class="fab fa-twitter"></i></a></li>
-                     <li><a href="https://plus.google.com/u/0/113554313451333214332" target="_blank" class="icon-googleplus"><i class="fab fa-google-plus"></i></a></li>
-                     <li><a href="https://www.pinterest.es/javinico08/" target="_blank" class="icon-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
-                     <li><a href="mailto:javinico08@gmail.com" class="icon-mail"><i class="fas fa-envelope-open"></i></a></li>
-               </ul>
-           </div>
-            <!-- <article class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-              <div class="reproductor">
-                <audio id="player">
+                </div>
+                <div class="tercera">
+                  <img src="javi/fondo2.png" alt="">
+                </div>
+                <div class="cuarta">
+                  <img src="javi/fondo3.png" alt="">
+                </div>
+                </div>
+                <div class="social">
+                    <ul>
+                         <li><a href="https://www.facebook.com/javier.elnuevo.9" target="_blank" class="icon-facebook"><i class="fab fa-facebook-f"></i></a></li>
+                         <li><a href="https://twitter.com/MrSubconsciente" target="_blank" class="icon-twitter"><i class="fab fa-twitter"></i></a></li>
+                         <li><a href="https://plus.google.com/u/0/113554313451333214332" target="_blank" class="icon-googleplus"><i class="fab fa-google-plus"></i></a></li>
+                         <li><a href="https://www.pinterest.es/javinico08/" target="_blank" class="icon-pinterest"><i class="fab fa-empire"></i></a></li>
+                         <li><a href="mailto:javinico08@gmail.com" class="icon-mail"><i class="fas fa-envelope-open"></i></a></li>
+                   </ul>
+               </div>
+                <div class="extras col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                  <div class="musica col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                      <img src="javi/tema.png">
+                      <!-- <br> -->
+                    <audio controls>
+                      <source src="javi/audio/Dash.ogg" type="audio/ogg">
+                        <source src="javi/audio/Dash.mp3" type="audio/mpeg">
+                        </audio>
+                    </div>
 
-                     <source src="javi/audio/.ogg" type="audio/ogg">
+                </div>
+                <div class="spoty">
+                  <iframe src="https://open.spotify.com/embed/user/21j2r73xmwiueoul545izalja/playlist/06sp9VNOvL8baPUWn55RRy" frameborder="0" allowtransparency="true"></iframe>
+                </div>
+                <div class="otros col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                  <h1>Otros trabajos:</h1>
+                  <p>Tambien me dedico a la personalizacion de logotipos y rotulos, <a id="ejRot">Clica aqui para ver un ejemplo<a></p>
+                    <div class="rotulo">
+                      <img src="javi/rotulos/j.png">
+                      <img src="javi/rotulos/a.png">
+                      <img src="javi/rotulos/v.png">
+                      <img src="javi/rotulos/i.png">
+                      <img src="javi/rotulos/e.png">
+                      <img src="javi/rotulos/r.png">
+                    </div>
+                </div>
 
-                     <source src="javi/audio/.mp3" type="audio/mpeg"/>
-                 </audio>
-                 <div class="btn-group">
-                   <a class="masVol" onclick="document.getElementById('player').volume+=0.1" class="btn btn-inverse"><i class="icon-white glyphicon glyphicon-plus-sign"></i></a>
-                   <a class="mute" onclick="mute()" class="btn btn-inverse"><i class="icon-white icon-stop"></i></a>
-                   <a class="play" onclick="document.getElementById('player').play()" class="btn btn-inverse"><i class="icon-white icon-play"></i></a>
-                   <a class="pause" onclick="document.getElementById('player').pause()" class="btn btn-inverse"><i class="icon-white icon-pause"></i></a>
-                   <a class="menosVol" onclick="document.getElementById('player').volume-=0.1" class="btn btn-inverse"><i class="icon-white glyphicon glyphicon-minus-sign"></i></a>
-                 </div>
-              </div>
-
-            </article> -->
-            <article class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-              <div class="mensajesDirectos ">
-                  <br style="clear:both">
-                  <div class="form-group col-md-4 ">
-                    <label id="messageLabel" for="message">Escribe tu mensaje directo</label>
-                    <textarea class="form-control input-sm " type="textarea" id="mensaje" placeholder="Mensaje..." maxlength="140" rows="7"></textarea>
-                    <span class="help-block"><p id="mensajeInferior" class="help-block ">El maximo de caracteres es 140.</p></span>
-                  </div>
-                  <br style="clear:both">
-                  <div class="form-group col-md-2">
-                    <button class="form-control input-sm btn btn-success disabled" id="btnSubmit" name="btnSubmit" type="button" style="height:35px"> Enviar</button>
-                  </div>
-              </div>
-            </article>
-          </section>
     </div>
-        </div>
     </div>
     <div  id="pie" class="row  bg-dark text-white ">
       <div class="row col-xl-6 col-lg-6 col-md-6">
         <div class="col-xl-3 col-lg-4 col-md-12 col-sm-12">
           <h1>Contacta</h1>
             <i class="fas fa-phone fa-2x"></i>
-            <a href="tel:+34555000555">555-000-555</a><br>
+            <a href="tel:+36628152140">628-152-140</a><br>
             <i class="fas fa-at fa-2x"></i>
-            <a href="mail:correo@gmail.com">correo@gmail.com</a>
+            <a href="mailto:javinico08@gmail.com">javinico08@gmail.com</a>
         </div>
         <div class="col-xl-3 col-lg-4 col-md-12 col-sm-12">
           <h1>Servicios</h1>
