--- a/Javi.html
+++ b/Javi.html
@@ -72,7 +72,11 @@
 
     });
     </script>
-
+<style media="screen">
+body{
+  background-image: url("javi/fondoWeb.jpg");
+}
+</style>
 </head>
 
 <body>
@@ -125,7 +129,7 @@
 
         <div id="cont" class="row pt-5">
             <div class="yo col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-              <img src="quienesSomos/javi.jpg" alt="" id="Javi">
+              <img src="quienesSomos/javi.png" alt="" id="Javi">
               <h2>JAVIER</h2>
               <p>En los proyectos suelo dedicarme a la parte de animaciones, música y video. Utilizo CSS3 , HTML5 y JQUERY. <br> Tengo una actitud reservada. Soy: observador, meticuloso, metódico, paciente y autodidacta. Me gusta la lógica y me considero una persona centrada con toques de "sana locura".</p>
             </div>
@@ -179,6 +183,22 @@
                 <div class="spoty">
                   <iframe src="https://open.spotify.com/embed/user/21j2r73xmwiueoul545izalja/playlist/06sp9VNOvL8baPUWn55RRy" frameborder="0" allowtransparency="true"></iframe>
                 </div>
+                <div class="lenguajes col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                  <h1>¿Con que desarrollo?:</h1>
+                  <p>Estoy especializado en varios lenguajes , cms, y sistemas operativos</p>
+                  <div class="leng">
+                    <i class="fab fa-html5 fa-2x"></i>
+                    <i class="fab fa-css3 fa-2x"></i>
+                    <i class="fab fa-js fa-2x"></i>
+                    <i class="fab fa-php fa-2x"></i>
+                    <i class="fab fa-laravel fa-2x"></i>
+                    <i class="fab fa-joomla fa-2x"></i>
+                    <i class="fab fa-blogger fa-2x"></i>
+                    <i class="fab fa-wordpress-simple fa-2x"></i>
+                    <i class="fab fa-microsoft fa-2x"></i>
+                    <i class="fab fa-linux fa-2x"></i>
+                  </div>
+                </div>
                 <div class="otros col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                   <h1>Otros trabajos:</h1>
                   <p>Tambien me dedico a la personalizacion de logotipos y rotulos, <a id="ejRot">Clica aqui para ver un ejemplo<a></p>
@@ -191,6 +211,7 @@
                       <img src="javi/rotulos/r.png">
                     </div>
                 </div>
+
 
     </div>
     </div>
@@ -221,6 +242,7 @@
             <li><a href="https://plus.google.com/u/0/113554313451333214332" target="_blank" class="icon-googleplus"><i class="fab fa-google-plus"></i></a></li>
             <li><a href="https://www.pinterest.es/javinico08/" target="_blank" class="icon-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
             <li><a href="mailto:javinico08@gmail.com" class="icon-mail"><i class="fas fa-envelope-open"></i></a></li>
+            <li><a href="#"><i class="fab fa-d-and-d"></i></a></li>
          </ul>
       </div>
     </div>
