--- a/Javi.html
+++ b/Javi.html
@@ -7,12 +7,9 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Abel|Anton" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
-    <!-- link a el css del reproductor mp3 -->
-    <link rel="stylesheet" href="javi/reproductorCss.css">
-    <!-- link a el js del reproductor mp3 -->
-    <link rel="stylesheet" href="javi/reproductorScript.js">
-    <!-- link a el css general de la pagina javi.html -->
+      <!-- link a el css general de la pagina javi.html -->
     <link rel="stylesheet" href="css/CssJaviHtml.css">
     <link rel="stylesheet" href="javi/scriptQuSom.js">
 
@@ -74,7 +71,8 @@
     </script>
 <style media="screen">
 body{
-  background-image: url("javi/fondoWeb.jpg");
+  background-image: url("javi/fondoWeb.png");
+    font-family: 'Abel', sans-serif;
 }
 </style>
 </head>
@@ -135,7 +133,7 @@ body{
             </div>
             <h2></h2>
             <div class="primero row col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                <img src="javi/fondo.png" alt="" class="fondo">
+                <img src="javi/fond.png" alt="" class="fondo">
                 <div class="botones">
                   <button type="button" name="button" class="izquierda"> <i class="far fa-circle"></i></button>
                   <button type="button" name="button" class="derecha"> <i class="far fa-circle"></i></button>
@@ -145,9 +143,9 @@ body{
 
 
 
-              <div class="contacto row col-xl-5 offset-xl-5 col-lg-5 offset-lg-5 col-md-5 offset-md-5">
+              <div class="contacto row col-xl-5 offset-xl-5 col-lg-5 offset-lg-5 col-md-5 offset-md-5 col-sm-5 offset-sm-5 col-9">
                 <div class="primera">
-                  <h1>Estos son los proyectos que he realizado, para más información comunicate conmigo. Sera un placer atenderte.</h1>
+                  <h1>Estos son los proyectos que he realizado, para más información contacta conmigo. Será un placer atenderte.</h1>
                 </div>
                 <div class="segunda">
                   <img src="javi/fondo1.png" alt="">
@@ -184,7 +182,7 @@ body{
                   <iframe src="https://open.spotify.com/embed/user/21j2r73xmwiueoul545izalja/playlist/06sp9VNOvL8baPUWn55RRy" frameborder="0" allowtransparency="true"></iframe>
                 </div>
                 <div class="lenguajes col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                  <h1>¿Con que desarrollo?:</h1>
+                  <h1>¿Con qué desarrollo?:</h1>
                   <p>Estoy especializado en varios lenguajes , cms, y sistemas operativos</p>
                   <div class="leng">
                     <i class="fab fa-html5 fa-2x"></i>
