--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -108,7 +108,7 @@
 
         <div id="cont" class="row pt-5">
 
-            <div class="desarrolladores row col-xl-12 col-lg-12 col-md-12 col-sm-12">
+            <div class="desarrolladores row col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
               <h1>Desarrolladores:</h1><br>
                 <img id="javi" src="quienesSomos/javi.png" alt="Javi"  data-toggle="tooltip" data-placement="bottom" title="Javier Dart Belenguer. Desarrollador web">
                 <img id="eric" src="quienesSomos/eric.png" alt="Eric"  data-toggle="tooltip" data-placement="bottom" title="Eric!">
