--- a/Servicios.html
+++ b/Servicios.html
@@ -7,6 +7,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Abel|Anton" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
 	<link rel="stylesheet" href="css/estiloServicios.css">
     <script type="text/javascript">
@@ -32,6 +33,13 @@
             });
         });
 	</script>
+  <style media="screen">
+  body{
+    background-image: url("javi/fondoWeb.png");
+      font-family: 'Abel', sans-serif;
+      color:#fff;
+  }
+  </style>
 </head>
 
 <body>
