--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -8,13 +8,19 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
-
+    <link href="https://fonts.googleapis.com/css?family=Abel|Anton" rel="stylesheet">
 
 
 
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/QuienesSomos.css">
-
+    <style media="screen">
+    body{
+      background-image: url("javi/fondoWeb.png");
+        font-family: 'Abel', sans-serif;
+        color:#fff;
+    }
+    </style>
 
     <script type="text/javascript">
         $(document).ready(function() {
