--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -14,7 +14,13 @@
 
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/QuienesSomos.css">
-
+    <style media="screen">
+    body{
+      background-image: url("javi/background-3143942.jpg");
+        font-family: 'Abel', sans-serif;
+        color:#fff;
+    }
+    </style>
 
     <script type="text/javascript">
         $(document).ready(function() {
